2000-04-12  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in (ALL_LINGUAS): added nl & ro

2000-04-08  Jesus Bravo Alvarez  <jba@pobox.com>

	* ghex.desktop: Added Galician entry.
	* configure.in (ALL_LINGUAS): Added Galician (gl)

2000-04-07  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gtkhex.c (gtk_hex_key_press): added moving by pages when pressing
	PageUp and PageDown.
	(*_expose): change MAX() to MIN(). silly me. this fixes
	ugly flickering when scrolling upwards.

2000-04-07  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* configure.in: bumped version to 1.1.2. released a new tarball.

2000-04-02  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* src/print.c: gified some ints and floats; formatting changes;
	made shaded box size user-configurable.
	* src/preferences.c (create_prefs_dialog): UI for setting shaded box
	size.
	(box_size_changed_cb): new callback for setting propertybox to
	"changed" state after modifying shaded box size.
	* src/ghex.h (struct _PropertyUI): added members for above.
	(shaded_box_size): declare.
	* config.c (load_configuration, save_configuration): save settings
	for shaded box printing.
	* po/*.po: made an update-po.

2000-03-27  Chema Celorio  <chema@celorio.com>

	* src/print.c : Format improvement for
	small horizontal chars displays.
	(print_shaded_boxes): new funtion
	(print_shaded_box): new function
	(print_document): call print_shaded_boxes after
	calling print_header.

2000-03-26  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* src/ghex.h (struct _PreviewWindow): removed.
	(GHexPrintJobInfo): added master member.
	* src/print.c (preview_*_cb): removed.
	(preview_destroy_cb): clean up printing stuff after previewing.
	(print_document): use GnomePrintMaster for printing and
	GnomePrintMasterPreview for previewing. didn't notice them before :(

2000-03-26  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* src/ghex.h: moved GhexPrintJobInfo here and renamed it to
	GHexPrintJobInfo.