@@ -1,3 +1,8 @@
+2000-05-01  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* src/findreplace.c (goto_byte_cb): can now handle offsets
+	in hex.
+
 2000-04-12  Pablo Saratxaga <pablo@mandrakesoft.com>
 
 	* configure.in (ALL_LINGUAS): added nl & ro
